--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
-    "mongoose": "^7.4.1"
+    "mongoose": "^7.4.1",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "compression": "^1.7.4",
