--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.3",
     "bcrypt": "^5.1.0",
     "crypto": "^1.0.1",
+    "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
+    "kafkajs": "^2.2.4",
     "lodash": "^4.17.21",
     "mongoose": "^7.4.1",
+    "redis": "^3.1.2",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
