--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "amqplib": "^0.10.3",
     "bcrypt": "^5.1.0",
+    "cloudinary": "^2.1.0",
     "crypto": "^1.0.1",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
@@ -21,6 +22,7 @@
     "kafkajs": "^2.2.4",
     "lodash": "^4.17.21",
     "mongoose": "^7.4.1",
+    "mysql2": "^3.9.3",
     "redis": "^3.1.2",
     "slugify": "^1.6.6"
   },
