--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.550.0",
     "@aws-sdk/s3-request-presigner": "^3.550.0",
+    "accesscontrol": "^2.2.1",
     "amqplib": "^0.10.3",
     "bcrypt": "^5.1.0",
     "cloudinary": "^2.1.0",
